// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/datasource/crate/index getReleases clones cloudsmith private registry 1`] = `
{
  "dependencyUrl": "https://cloudsmith.io/~myorg/repos/myrepo/packages/detail/cargo/mypkg",
  "registryUrl": "https://dl.cloudsmith.io/basic/myorg/myrepo/cargo/index.git",
  "releases": [
    {
      "version": "0.1.0",
    },
    {
      "version": "0.1.1",
    },
  ],
}
`;

exports[`modules/datasource/crate/index getReleases clones other private registry 1`] = `
{
  "dependencyUrl": "https://github.com/mcorbin/testregistry/mypkg",
  "registryUrl": "https://github.com/mcorbin/testregistry",
  "releases": [
    {
      "version": "0.1.0",
    },
    {
      "version": "0.1.1",
    },
  ],
}
`;

exports[`modules/datasource/crate/index getReleases processes real data: amethyst 1`] = `
{
  "dependencyUrl": "https://crates.io/crates/amethyst",
  "homepage": "https://amethyst.rs/",
  "registryUrl": "https://crates.io",
  "releases": [
    {
      "version": "0.1.0",
    },
    {
      "version": "0.1.1",
    },
    {
      "version": "0.1.3",
    },
    {
      "version": "0.1.4",
    },
    {
      "version": "0.2.1",
    },
    {
      "version": "0.3.0",
    },
    {
      "version": "0.3.1",
    },
    {
      "version": "0.4.0",
    },
    {
      "version": "0.4.1",
    },
    {
      "version": "0.4.2",
    },
    {
      "version": "0.4.3",
    },
    {
      "version": "0.5.0",
    },
    {
      "version": "0.5.1",
    },
    {
      "version": "0.6.0",
    },
    {
      "version": "0.7.0",
    },
    {
      "version": "0.8.0",
    },
    {
      "version": "0.9.0",
    },
    {
      "version": "0.10.0",
    },
    {
      "isDeprecated": true,
      "version": "0.10.1",
    },
  ],
  "sourceUrl": "https://github.com/amethyst/amethyst",
}
`;

exports[`modules/datasource/crate/index getReleases processes real data: libc 1`] = `
{
  "dependencyUrl": "https://crates.io/crates/libc",
  "registryUrl": "https://crates.io",
  "releases": [
    {
      "version": "0.1.0",
    },
    {
      "version": "0.1.1",
    },
    {
      "version": "0.1.2",
    },
    {
      "version": "0.1.3",
    },
    {
      "version": "0.1.4",
    },
    {
      "version": "0.1.5",
    },
    {
      "version": "0.1.6",
    },
    {
      "version": "0.1.7",
    },
    {
      "version": "0.1.8",
    },
    {
      "isDeprecated": true,
      "version": "0.1.9",
    },
    {
      "version": "0.1.10",
    },
    {
      "isDeprecated": true,
      "version": "0.1.11",
    },
    {
      "version": "0.1.12",
    },
    {
      "version": "0.2.0",
    },
    {
      "version": "0.2.1",
    },
    {
      "version": "0.2.2",
    },
    {
      "version": "0.2.3",
    },
    {
      "version": "0.2.4",
    },
    {
      "version": "0.2.5",
    },
    {
      "version": "0.2.6",
    },
    {
      "version": "0.2.7",
    },
    {
      "version": "0.2.8",
    },
    {
      "version": "0.2.9",
    },
    {
      "version": "0.2.10",
    },
    {
      "version": "0.2.11",
    },
    {
      "version": "0.2.12",
    },
    {
      "version": "0.2.13",
    },
    {
      "version": "0.2.14",
    },
    {
      "version": "0.2.15",
    },
    {
      "version": "0.2.16",
    },
    {
      "version": "0.2.17",
    },
    {
      "version": "0.2.18",
    },
    {
      "version": "0.2.19",
    },
    {
      "version": "0.2.20",
    },
    {
      "version": "0.2.21",
    },
    {
      "version": "0.2.22",
    },
    {
      "version": "0.2.23",
    },
    {
      "version": "0.2.24",
    },
    {
      "version": "0.2.25",
    },
    {
      "version": "0.2.26",
    },
    {
      "version": "0.2.27",
    },
    {
      "version": "0.2.28",
    },
    {
      "version": "0.2.29",
    },
    {
      "version": "0.2.30",
    },
    {
      "version": "0.2.31",
    },
    {
      "version": "0.2.32",
    },
    {
      "version": "0.2.33",
    },
    {
      "version": "0.2.34",
    },
    {
      "version": "0.2.35",
    },
    {
      "version": "0.2.36",
    },
    {
      "version": "0.2.37",
    },
    {
      "version": "0.2.38",
    },
    {
      "version": "0.2.39",
    },
    {
      "version": "0.2.40",
    },
    {
      "version": "0.2.41",
    },
    {
      "version": "0.2.42",
    },
    {
      "version": "0.2.43",
    },
    {
      "version": "0.2.44",
    },
    {
      "version": "0.2.45",
    },
    {
      "version": "0.2.46",
    },
    {
      "version": "0.2.47",
    },
    {
      "version": "0.2.48",
    },
    {
      "version": "0.2.49",
    },
    {
      "version": "0.2.50",
    },
    {
      "version": "0.2.51",
    },
  ],
  "sourceUrl": "https://github.com/rust-lang/libc",
}
`;
